# worldcup2022-sweepstake-slackbot

./: README.md  pyproject.toml  test_to_get_matches.ipynb  worldcup2022-slackbot.py
.github/workflows/: worldcup2022_sweepstake_slackbot_daily_update.yml
